--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Available Games:</h1>
     <ul>
-        <li><a href="./catch/index.html">Catch</a></li>
+        <li><a href="./catch2/index.html">Catch</a></li>
     </ul>
   </body>
 </html>
