--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <h1>Available Games:</h1>
     <ul>
         <li><a href="./catch/index.html">Catch</a></li>
+        <li><a href="./trivia/index.html">Trivia</a></li>
     </ul>
   </body>
 </html>
