add basic kick game structure

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
     <ol type="A" id="games-list">
       <li><a href="./catch/index.html" style="color: white;">Atrapa Objetos</a></li>
       <li><a href="./trivia/index.html" style="color: white;">Trivia</a></li>
+      <li><a href="./kick/index.html" style="color: white;">Penales</a></li>
     </ol>
   </div>
 </body>
