add pose inference with mediapipe

--- a/src/kick/index.html
+++ b/src/kick/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+    <canvas class="input_canvas" id="input_canvas" style="display: none;"></canvas>
+    <div id="camera_container" style="display: none;">
+        <video class="input_video" id="input_video" style="display: none;"></video>
+        <canvas class="output_canvas" id="output_canvas"></canvas>
+    </div>
     <div id="bar-container" style="visibility: hidden;"">
         <canvas id="gjs-canvas"></canvas>
     </div>
