improve build process

--- a/src/catch/index.html
+++ b/src/catch/index.html
@@ -33,13 +33,13 @@
     </div>
 
     <div class="bg hidden" id="win">
-        <video id="win-video" autoplay muted loop playsinline>
+        <video id="win-video" preload="none" autoplay muted loop playsinline>
             <source type="video/mp4" src="./assets/win.mp4"/>
         </video>
     </div>
 
     <div class="bg hidden" id="lose">
-        <video id="lose-video" autoplay muted loop playsinline>
+        <video id="lose-video" preload="none" autoplay muted loop playsinline>
             <source type="video/mp4" src="./assets/lose.mp4"/>
         </video>
     </div>
