Add loder while camera is starting

--- a/src/catch/index.html
+++ b/src/catch/index.html
@@ -18,9 +18,10 @@
         <canvas class="hidden" id="output_canvas"></canvas>
     </div>
 
+    <div class="centered-container" id="loader"><div class="loader"></div></div>
 
-    <div class="bg" id="idle">
-        <div id="start-text">
+    <div class="bg hidden" id="idle">
+        <div class="centered-container" id="start-text">
             <p>Presiona "Start" para empezar o "Reset" para regresar</p>
         </div>
         <video id="idle-video" autoplay muted loop playsinline>
