--- a/src/catch/index.html
+++ b/src/catch/index.html
@@ -24,7 +24,7 @@
         <div class="centered-container" id="start-text">
             <p>Presiona "Start" para empezar o "Reset" para regresar</p>
         </div>
-        <video id="idle-video" autoplay muted loop playsinline>
+        <video id="idle-video" preload="auto" autoplay muted loop playsinline>
             <source type="video/mp4" src="./assets/idle.mp4"/>
         </video>
     </div>
