add spinner and auto reset to kick game

--- a/src/kick/index.html
+++ b/src/kick/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class="centered-container" id="loader"><div class="loader"></div></div>
     <canvas class="input_canvas" id="input_canvas" style="display: none;"></canvas>
     <div id="camera_container" style="display: none;">
         <video class="input_video" id="input_video" style="display: none;"></video>
