add basic virtual bg with stadium image

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
       <li><a href="./catch/index.html" style="color: white;">Atrapa Objetos</a></li>
       <li><a href="./trivia/index.html" style="color: white;">Trivia</a></li>
       <li><a href="./kick/index.html" style="color: white;">Penales</a></li>
+      <li><a href="./juggle/index.html" style="color: white;">Tecniquitas</a></li>
     </ol>
   </div>
 </body>
