add to main index

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       <li><a href="./trivia/index.html" style="color: white;">Trivia</a></li>
       <li><a href="./kick/index.html" style="color: white;">Penales</a></li>
       <li><a href="./juggle/index.html" style="color: white;">Tecniquitas</a></li>
+      <li><a href="./scream/index.html" style="color: white;">Grita Gol</a></li>
     </ol>
   </div>
 </body>
