--- a/src/juggle/index.html
+++ b/src/juggle/index.html
@@ -9,11 +9,36 @@
 </head>
 <body>
 
-  <canvas id="gjs-canvas"></canvas>
+  <div class="centered-container" id="loader"><div class="loader"></div></div>
+
+  <div class="bg hidden" id="idle">
+    <div class="centered-container" id="start-text">
+        <p>Presiona "Start" para empezar o "Reset" para regresar</p>
+    </div>
+    <video id="idle-video" preload="auto" autoplay muted loop playsinline>
+        <source type="video/mp4" src="../common/assets/idle.mp4"/>
+    </video>
+  </div>
+
+  <div id="game">
+    <canvas id="gjs-canvas"></canvas>
+    <img id="vbackground" class="hidden" src="./assets/bg.png">
+  </div>
 
   <div id="controls">
     <video class="input_video hidden"></video>
-    <canvas class="output_canvas" id="output_canvas"></canvas>
+    <canvas class="output_canvas hidden" id="output_canvas"></canvas>
+  </div>
+
+  <div class="bg hidden" id="win">
+    <video id="win-video" preload="none" autoplay muted loop playsinline>
+        <source type="video/mp4" src="../common/assets/win.mp4"/>
+    </video>
+  </div>
+  <div class="bg hidden" id="lose">
+    <video id="lose-video" preload="none" autoplay muted loop playsinline>
+        <source type="video/mp4" src="../common/assets/lose.mp4"/>
+    </video>
   </div>
 
 </body>
