add arts and fonts

--- a/src/juggle/index.html
+++ b/src/juggle/index.html
@@ -3,6 +3,8 @@
 <head>
   <link rel="stylesheet" type="text/css" href="./juggle.css">
   <meta property="og:image" content="./assets/ball.png"/>
+  <meta property="og:image" content="./assets/scorebg.png"/>
+  <meta property="og:image" content="./assets/footer.png"/>
   <script src="./resources.js"></script>
   <script src="./config.js"></script>
   <script type="module" src="./juggle.js"></script>
@@ -22,7 +24,7 @@
 
   <div id="game">
     <canvas id="gjs-canvas"></canvas>
-    <img id="vbackground" class="hidden" src="./assets/bg.png">
+    <img id="vbackground" class="hidden" src="./assets/bg.jpg">
   </div>
 
   <div id="controls">
