use raptor aesthetic in all games

--- a/src/catch/index.html
+++ b/src/catch/index.html
@@ -22,7 +22,7 @@
 
     <div class="bg hidden" id="idle">
         <div class="centered-container" id="start-text">
-            <p>Presiona "Start" para empezar o "Reset" para regresar</p>
+            <p>Presiona <u>"Start"</u> para empezar <br><br> o <u>"Reset"</u> para regresar</p>
         </div>
         <video id="idle-video" preload="auto" autoplay muted loop playsinline>
             <source type="video/mp4" src="./assets/idle.mp4"/>
