--- a/src/kick/index.html
+++ b/src/kick/index.html
@@ -32,7 +32,9 @@
     <video id="fail-video" autoplay muted playsinline style="display: none;">
         <source type="video/mp4" src="./assets/fail.mp4" />
     </video>
-    <div id="start-text">Presiona "Start" para empezar o "Reset" para regresar</div>
+    <div id="start-text">
+        <p>Presiona <u>"Start"</u> para empezar <br><br> o <u>"Reset"</u> para regresar</p>
+    </div>
 
 </body>
 
