--- a/src/scream/index.html
+++ b/src/scream/index.html
@@ -14,6 +14,11 @@
     <script src="audio_logic.js"></script>
 
     <div id="start_container">
+
+        <div class="centered-container" id="start-text">
+                <p>Presiona <u>"Start"</u> para empezar <br><br> o <u>"Reset"</u> para regresar</p>
+        </div>
+
         <video id="start_video" autoplay muted loop playsinline>
             <source type="video/mp4" src="../common/assets/idle.mp4" />
         </video>
