Add configuration persistance

--- a/src/catch/index.html
+++ b/src/catch/index.html
@@ -9,6 +9,7 @@
     <meta property="og:video" content="./assets/idle.mp4"/>
     <script src="./resources.js"></script>
     <script src="./config.js"></script>
+    <script src="../common/config/configPersistance.js"></script>
     <script type="module" src="./catch.js"></script>
 </head>
 <body>
@@ -18,6 +19,8 @@
         <canvas class="hidden" id="output_canvas"></canvas>
     </div>
 
+    <a href="config.html" id="configurator"></a>
+    
     <div class="centered-container" id="loader"><div class="loader"></div></div>
 
     <div class="bg hidden" id="idle">
