--- a/src/juggle/index.html
+++ b/src/juggle/index.html
@@ -7,10 +7,11 @@
   <meta property="og:image" content="./assets/footer.png"/>
   <script src="./resources.js"></script>
   <script src="./config.js"></script>
+  <script src="../common/config/configPersistance.js"></script>
   <script type="module" src="./juggle.js"></script>
 </head>
 <body>
-
+  <a href="config.html" id="configurator"></a>
   <div class="centered-container" id="loader"><div class="loader"></div></div>
 
   <div class="bg hidden" id="idle">
