--- a/src/kick/index.html
+++ b/src/kick/index.html
@@ -6,11 +6,13 @@
     <meta property="og:image" content="./assets/bar.png" />
     <meta property="og:image" content="./assets/bar-ball.png" />
     <script src="config.js"></script>
+    <script src="../common/config/configPersistance.js"></script>
     <script src="resources.js"></script>
     <script src="kick.js" type="module"></script>
 </head>
 
 <body>
+    <a href="config.html" id="configurator"></a>
     <div class="centered-container" id="loader"><div class="loader"></div></div>
     <canvas class="input_canvas" id="input_canvas" style="display: none;"></canvas>
     <div id="camera_container" style="display: none;">
