--- a/src/scream/index.html
+++ b/src/scream/index.html
@@ -9,7 +9,9 @@
 
 
 <body scroll="no" style="overflow: hidden; margin: 0%;">
+    <a href="config.html" id="configurator"></a>
     <script src="config.js"></script>
+    <script src="../common/config/configPersistance.js"></script>
     <script src="scream.js"></script>
     <script src="audio_logic.js"></script>
 
