Fix juggle game bg image size

--- a/src/juggle/index.html
+++ b/src/juggle/index.html
@@ -25,12 +25,12 @@
 
   <div id="game">
     <canvas id="gjs-canvas"></canvas>
-    <img id="vbackground" class="hidden" src="./assets/bg.jpg">
+    <img id="vbackground" class="hidden bg" src="./assets/bg.jpg">
   </div>
 
   <div id="controls">
     <video class="input_video hidden"></video>
-    <canvas class="output_canvas hidden" id="output_canvas"></canvas>
+    <canvas class="output_canvas hidden bg" id="output_canvas"></canvas>
   </div>
 
   <div class="bg hidden" id="win">
