Catch buttons no cv

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
       <li><a href="./juggle/index.html" style="color: white;">Tecniquitas</a></li>
       <li><a href="./scream/index.html" style="color: white;">Grita Gol</a></li>
       <li><a href="./trivia/index.html" style="color: white;">Trivia</a></li>
+      <li><a href="./catch-no-cv/index.html" style="color: white;">Atrapa objetos</a></li>
     </ol>
     
   </div>
