--- a/src/catch-no-cv/index.html
+++ b/src/catch-no-cv/index.html
@@ -11,9 +11,11 @@
     <meta property="og:image" content="./assets/PIERNAS.png"/>
     <meta property="og:image" content="./assets/VASO.png"/>
     <meta property="og:image" content="./assets/bg.jpeg"/>
+    <meta property="og:image" content="./assets/bggame.jpg"/>
     <meta property="og:image" content="./assets/Loncherita.png"/>
     <meta property="og:image" content="./assets/lose.png"/>
     <meta property="og:image" content="./assets/win.png"/>
+    <meta property="og:image" content="./assets/CONCEPTO.png"/>
     <script src="./resources.js"></script>
     <script src="./config.js"></script>
     <script src="../common/config/configPersistance.js"></script>
@@ -39,11 +41,15 @@
     </div>
 
     <div class="hidden" id="win">
-        <img src="./assets/win.png">
+        <div class="centered-container">
+            <img class="win-img" src="./assets/win.png">
+        </div>
     </div>
 
     <div class="hidden" id="lose">
-        <img src="./assets/lose.png">
+        <div class="centered-container">
+            <img class="win-img" src="./assets/lose.png">
+        </div>
     </div>
 </body>
 </html>
