Same time falling items

--- a/src/catch-no-cv/index.html
+++ b/src/catch-no-cv/index.html
@@ -16,6 +16,7 @@
     <meta property="og:image" content="./assets/lose.png"/>
     <meta property="og:image" content="./assets/win.png"/>
     <meta property="og:image" content="./assets/CONCEPTO.png"/>
+    <meta property="og:image" content="./assets/heart.png"/>
     <script src="./resources.js"></script>
     <script src="./config.js"></script>
     <script src="../common/config/configPersistance.js"></script>
